--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -111,12 +111,24 @@ Event Frame Dashboard
         </thead>
         <tbody>
             {% for eventFrameAttribute in eventFrameAttributes %}
-                <tr>
+                <tr id = "{{ eventFrame.StartTimestamp }}">
                     <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues", tagId = eventFrameAttribute.Tag.TagId,
                         eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                     <td>{{ eventFrameAttribute.EventFrameAttributeTemplate.Name }}</td>
+                    {% set firstTagValueInEventFrame = false %}
                     {% if eventFrameAttribute.Tag.TagValues[0] %}
                         {% set firstTagValue = eventFrameAttribute.Tag.TagValues | sort(attribute = "Timestamp", reverse = True) | first %}
+                        {% if eventFrame.EndTimestamp %}
+                            {% if firstTagValue.Timestamp >= eventFrame.StartTimestamp and firstTagValue.Timestamp <= eventFrame.EndTimestamp %}
+                                {% set firstTagValueInEventFrame = true %}
+                            {% endif %}
+                        {% else %}
+                            {% if firstTagValue.Timestamp >= eventFrame.StartTimestamp %}
+                                {% set firstTagValueInEventFrame = true %}
+                            {% endif %}
+                        {% endif %}
+                    {% endif %}
+                    {% if firstTagValueInEventFrame %}
                         <td id = "tdLastTimestamp{{ eventFrameAttribute.Tag.TagId }}">{{ firstTagValue.Timestamp }}</td>
                         {% if eventFrameAttribute.Tag.LookupId %}
                             <td id = "tdLastValue{{ eventFrameAttribute.Tag.TagId }}">{{ eventFrameAttribute.Tag.Lookup.LookupValues | 
@@ -389,6 +401,7 @@ Event Frame Dashboard
                     }
                     else
                     {
+                        timestamp.isBetween()
                         $("#divNewValue" + id).removeClass("has-error")
                         var helpBlock = $("#pNewValue" + id).html("")
                         $("#divNewTimestamp" + id).removeClass("has-error")
