--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -111,8 +111,7 @@ Event Frame Dashboard
         </thead>
         <tbody>
             {% for eventFrameAttribute in eventFrameAttributes %}
-                <tr id = "trEventFrame{{ eventFrame.StartTimestamp }}", startTimestamp = "{{ eventFrame.StartTimestamp }}", 
-                    endTimestamp = "{{ eventFrame.EndTimestamp }}">
+                <tr id = "trEventFrame", startTimestamp = "{{ eventFrame.StartTimestamp }}", endTimestamp = "{{ eventFrame.EndTimestamp }}">
                     <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues", tagId = eventFrameAttribute.Tag.TagId,
                         eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                     <td>{{ eventFrameAttribute.EventFrameAttributeTemplate.Name }}</td>
@@ -135,7 +134,7 @@ Event Frame Dashboard
                     <td>
                         <div class = "form-group" id = "divNewValue{{ eventFrameAttribute.Tag.TagId }}">
                         {% if eventFrameAttribute.Tag.LookupId %}
-                            <select class = "form-control" id = "selectNewValue{{ eventFrameAttribute.Tag.TagId }}">
+                            <select class = "form-control" id = "inputOrSelectNewValue{{ eventFrameAttribute.Tag.TagId }}">
                                 <option value = "-1"></option>
                                 {% for lookupValue in eventFrameAttribute.Tag.Lookup.LookupValues %}
                                     {% if lookupValue.Selectable %}
@@ -145,7 +144,7 @@ Event Frame Dashboard
                             </select>
                             <p class = "help-block" id = "pNewValue{{ eventFrameAttribute.Tag.TagId }}"></p>
                         {% else %}
-                            <input class = "form-control" id = "inputNewValue{{ eventFrameAttribute.Tag.TagId }}" value = "">
+                            <input class = "form-control" id = "inputOrSelectNewValue{{ eventFrameAttribute.Tag.TagId }}" value = "">
                             <p class = "help-block" id = "pNewValue{{ eventFrameAttribute.Tag.TagId }}"></p>
                         {% endif %}
                         </div>
@@ -250,23 +249,12 @@ Event Frame Dashboard
                 var tabIndex = 1
                 $("[id^=divNewValue]").each(function() {
                     var id = $(this).attr("id").split("divNewValue")[1]
+                    $("#inputOrSelectNewValue" + id).attr("tabindex", tabIndex)
+                    if (tabIndex == 1)
+                    {
+                        $("#inputOrSelectNewValue" + id).focus()
+                    }
 
-                    if ($("#inputNewValue" + id).length)
-                    {
-                        $("#inputNewValue" + id).attr("tabindex", tabIndex)
-                        if (tabIndex == 1)
-                        {
-                            $("#inputNewValue" + id).focus()
-                        }
-                    }
-                    else
-                    {
-                        $("#selectNewValue" + id).attr("tabindex", tabIndex)
-                        if (tabIndex == 1)
-                        {
-                            $("#selectNewValue" + id).focus()
-                        }
-                    }
                     tabIndex = tabIndex + 1
                 })
                 $("#buttonAttributesSaveAll").attr("tabindex", tabIndex)
@@ -304,26 +292,11 @@ Event Frame Dashboard
                     "pageLength": 25
                 })
 
-            // Update the timestamp for input new values appropriately.
-            $("[id^=inputNewValue]").blur(function() {
+            // Update the timestamp for input or select new values appropriately.
+            $("[id^=inputOrSelectNewValue]").blur(function() {
                 var value = $.trim($(this).val())
-                var id = $(this).attr("id").split("inputNewValue")[1]
-                if (value == "")
-                {
-                    $("#inputNewTimestamp" + id).val("")
-                }
-                else
-                {
-                    var timestamp = new moment().local().format("YYYY-MM-DD HH:mm:ss")
-                    $("#inputNewTimestamp" + id).val(timestamp)
-                }
-            })
-
-            // Update the timestamp for select new values appropriately.
-            $("[id^=selectNewValue]").change(function() {
-                var value = $.trim($(this).val())
-                var id = $(this).attr("id").split("selectNewValue")[1]
-                if (value == "-1")
+                var id = $(this).attr("id").split("inputOrSelectNewValue")[1]
+                if ($(this).is("input") && value == "" || $(this).is("select") && value == "-1")
                 {
                     $("#inputNewTimestamp" + id).val("")
                 }
@@ -338,31 +311,36 @@ Event Frame Dashboard
             $(document).keypress(function(event) {
                 if (event.which == 13)
                 {
-                    if (!$("#buttonAttributesSaveAll").is(":focus"))
-                    {
-                        $("#buttonAttributesSaveAll").focus()
-                    }
-                    $("#buttonAttributesSaveAll").click()
+                    $("#buttonAttributesSaveAll").focus()
                 }
             })
 
             $("#buttonAttributesSaveAll").click(function() {
                 var error = false
                 var rows = []
+                var eventFrameStartTimestamp = $("#trEventFrame").attr("startTimestamp")
+                var eventFrameEndTimestamp = $("#trEventFrame").attr("endTimestamp")
 
-                var eventFrameStartTimestamp = $("[id^=trEventFrame]").attr("startTimestamp")
-                var eventFrameEndTimestamp = $("[id^=trEventFrame]").attr("endTimestamp")
-
-                // Loop through the input values and check for validation errors.
-                attributesTable.$("[id^=inputNewValue]").each(function() {
-                    var id = $(this).attr("id").split("inputNewValue")[1]
+                // Loop through the new input or select values and check for validation errors.
+                attributesTable.$("[id^=inputOrSelectNewValue]").each(function() {
+                    var id = $(this).attr("id").split("inputOrSelectNewValue")[1]
                     var value = $.trim($(this).val())
-                    var valueIsBlank = value == ""
+                    var valueIsBlank = true
                     var valueIsValid = $.isNumeric(value)
                     var timestamp = $.trim($("#inputNewTimestamp" + id).val())
                     var timestampIsBlank = timestamp == ""
                     var timestampIsValid = moment(timestamp, "YYYY-M-D H:m:s", true).isValid()
-                    var timestampIsInEventFrame
+                    var timestampIsInEventFrame = false
+
+                    if ($(this).is("input"))
+                    {
+                        valueIsBlank = value == ""
+                    }
+                    else if ($(this).is("select"))
+                    {
+                        valueIsBlank = value == "-1"
+                    }
+
                     if (eventFrameEndTimestamp == "None")
                     {
                         timestampIsInEventFrame = moment(timestamp).isSameOrAfter(eventFrameStartTimestamp)
@@ -420,62 +398,6 @@ Event Frame Dashboard
                         var row = {}
                         row["tagId"] = id
                         row["type"] = "input"
-                        row["value"] = value
-                        row["timestamp"] = timestamp
-                        rows.push(row)
-                    }
-                })
-
-                // Loop through the select values and check for validation errors.
-                attributesTable.$("[id^=selectNewValue]").each(function() {
-                    var id = $(this).attr("id").split("selectNewValue")[1]
-                    var value = $.trim($(this).val())
-                    var valueIsBlank = value == "-1"
-                    var valueIsValid = $.isNumeric(value)
-                    var timestamp = $.trim($("#inputNewTimestamp" + id).val())
-                    var timestampIsBlank = timestamp == ""
-                    var timestampIsValid = moment(timestamp, "YYYY-M-D H:m:s", true).isValid()
-                    
-                    if (valueIsBlank && timestampIsBlank)
-                    {
-                        $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
-                        $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
-                    }
-                    else if ((valueIsBlank && timestampIsValid) || (!valueIsValid && timestampIsValid))
-                    {
-                        error = true
-                        $("#divNewValue" + id).addClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("Not a valid float value")
-                        $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
-                    }
-                    else if ((valueIsBlank && !timestampIsValid) || (!valueIsValid && (timestampIsBlank || !timestampIsValid)))
-                    {
-                        error = true
-                        $("#divNewValue" + id).addClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("Not a valid float value")
-                        $("#divNewTimestamp" + id).addClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("This field is required.")
-                    }
-                    else if (valueIsValid && (timestampIsBlank || !timestampIsValid))
-                    {
-                        error = true
-                        $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
-                        $("#divNewTimestamp" + id).addClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("This field is required.")
-                    }
-                    else
-                    {
-                        $("#divNewValue" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewValue" + id).html("")
-                        $("#divNewTimestamp" + id).removeClass("has-error")
-                        var helpBlock = $("#pNewTimestamp" + id).html("")
-                        var row = {}
-                        row["tagId"] = id
-                        row["type"] = "select"
                         row["value"] = value
                         row["timestamp"] = timestamp
                         rows.push(row)
