--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -43,7 +43,7 @@
         <tbody>
             {% for elementAttribute in elementAttributes %}
                 <tr>
-                    <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues", tagId = elementAttribute.Tag.TagId,
+                    <td><a class = "btn btn-default" title = "Select" href = "{{ url_for("tagValues.listTagValues", 
                         elementAttributeId = elementAttribute.ElementAttributeId) }}"><span class = "glyphicon glyphicon-list"></span></a></td>
                     <td>{{ elementAttribute.ElementAttributeTemplate.Name }}</td>
                     {% if elementAttribute.Tag.TagValues[0] %}
