--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -19,6 +19,20 @@ Tag Value Notes
             <li><a href = "{{ url_for("elements.dashboard", elementId = elementAttribute.Element.ElementId) }}">{{ elementAttribute.Element.Name }}</a></li>
             <li class = "active">{{ elementAttribute.ElementAttributeTemplate.Name }}</li>
             <li class = "active">{{ tagValue.Timestamp }}</li>
+        {% elif eventFrame %}
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Enterprise",
+                selectedId = eventFrame.Element.ElementTemplate.Site.Enterprise.EnterpriseId) }}">
+                {{ eventFrame.Element.ElementTemplate.Site.Enterprise.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Site", selectedId = eventFrame.Element.ElementTemplate.Site.SiteId) }}">
+                {{ eventFrame.Element.ElementTemplate.Site.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "ElementTemplate",
+                selectedId = eventFrame.Element.ElementTemplate.ElementTemplateId) }}">{{ eventFrame.Element.ElementTemplate.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "EventFrameTemplate",
+                selectedId = eventFrame.EventFrameTemplate.EventFrameTemplateId) }}">{{ eventFrame.EventFrameTemplate.Name }}</a></li>
+            <li><a href = "{{ url_for("eventFrames.dashboard", eventFrameId = eventFrame.EventFrameId) }}">{{ eventFrame.friendlyName(True) }}</a></li>
+            <li class = "active">{{ eventFrameAttribute.EventFrameAttributeTemplate.Name }}</li>
+            <li class = "active">{{ tagValue.Timestamp }}</li>
         {% else %}
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Root") }}">..</a></li>
             <li><a href = "{{ url_for("tags.selectTag", selectedClass = "Enterprise",
@@ -35,8 +49,17 @@ Tag Value Notes
     <h1>Tag Value Notes <small></small></h1>
 </div>
 <div>
-    <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValueNotes.addTagValueNote", tagValueId = tagValue.TagValueId) }}" role = "button">
-        <span class = "glyphicon glyphicon-plus"></span></a>
+    {% if elementAttribute %}
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValueNotes.addTagValueNote", tagValueId = tagValue.TagValueId,
+            elementAttributeId = elementAttribute.ElementAttributeId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
+    {% elif eventFrame %}
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValueNotes.addTagValueNote", tagValueId = tagValue.TagValueId,
+            eventFrameId = eventFrame.EventFrameId, eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}" role = "button">
+            <span class = "glyphicon glyphicon-plus"></span></a>
+    {% else %}
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValueNotes.addTagValueNote", tagValueId = tagValue.TagValueId) }}" role = "button">
+            <span class = "glyphicon glyphicon-plus"></span></a>
+    {% endif %}
     <br><br>
     <table id = "tagValueNotesTable" class = "table">
         <thead>
