--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -50,7 +50,7 @@ Tag Values
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", tagId = tag.TagId,
             elementAttributeId = elementAttribute.ElementAttributeId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
     {% elif eventFrame %}
-        <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", eventFrameId = eventFrame.EventFrameId,
+        <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", tagId = tag.TagId, eventFrameId = eventFrame.EventFrameId,
             eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
     {% else %}
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValue", tagId = tag.TagId) }}" role = "button">
@@ -94,6 +94,10 @@ Tag Values
                         <td><a class = "{{ noteButtonClass }}" title = "Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
                             tagValueId = tagValue.TagValueId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
                             <span class = "glyphicon glyphicon-comment"></span></a></td>
+                    {% elif eventFrame %}
+                        <td><a class = "{{ noteButtonClass }}" title = "Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
+                            tagValueId = tagValue.TagValueId, eventFrameId = eventFrame.EventFrameId,
+                            eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}"><span class = "glyphicon glyphicon-comment"></span></a></td>
                     {% else %}
                         <td><a class = "{{ noteButtonClass }}" title = "Notes" href = "{{ url_for("tagValueNotes.listTagValueNotes", 
                             tagValueId = tagValue.TagValueId) }}"><span class = "glyphicon glyphicon-comment"></span></a></td>
