--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -17,7 +17,8 @@ Tag Value Notes
             <li><a href = "{{ url_for("elements.selectElement", selectedClass = "ElementTemplate",
                 selectedId = elementAttribute.Element.ElementTemplate.ElementTemplateId) }}">{{ elementAttribute.Element.ElementTemplate.Name }}</a></li>
             <li><a href = "{{ url_for("elements.dashboard", elementId = elementAttribute.Element.ElementId) }}">{{ elementAttribute.Element.Name }}</a></li>
-            <li class = "active">{{ elementAttribute.ElementAttributeTemplate.Name }}</li>
+            <li><a href = "{{ url_for("tagValues.listTagValues", elementAttributeId = elementAttribute.ElementAttributeId) }}">
+                {{ elementAttribute.ElementAttributeTemplate.Name }}</a></li>
             <li class = "active">{{ tagValue.Timestamp }}</li>
         {% elif eventFrame %}
             <li><a href = "{{ url_for("eventFrames.selectEventFrame", selectedClass = "Root") }}">..</a></li>
@@ -76,8 +77,18 @@ Tag Value Notes
                 <tr>
                     <td>{{ tagValueNote.Note.Timestamp }}</td>
                     <td>{{ tagValueNote.Note.Note }}</td>
-                    <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValueNotes.editTagValueNote",
-                        noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
+                    {% if elementAttribute %}
+                        <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValueNotes.editTagValueNote",
+                            noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId, elementAttributeId = elementAttribute.ElementAttributeId) }}">
+                            <span class = "glyphicon glyphicon-edit"></span></a></td>
+                    {% elif eventFrame %}
+                        <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValueNotes.editTagValueNote",
+                            noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId, eventFrameId = eventFrame.EventFrameId,
+                            eventFrameAttributeId = eventFrameAttribute.EventFrameAttributeId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
+                    {% else %}
+                        <td><a class = "btn btn-default" title = "Edit" href = "{{ url_for("tagValueNotes.editTagValueNote",
+                            noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId) }}"><span class = "glyphicon glyphicon-edit"></span></a></td>
+                    {% endif %}
                     <td><a class = "btn btn-default" title = "Delete" href = "{{ url_for("tagValueNotes.deleteTagValueNote",
                         noteId = tagValueNote.NoteId, tagValueId = tagValueNote.TagValueId) }}"><span class = "glyphicon glyphicon-trash"></span></a></td>
                 </tr>
